# deps_injection_with_returns

./: .gitignore  README.md  config.py  example.yaml  pyproject.toml  some_module.py  test_all.py
